Animation move when editing it. Fix render animations. Add support of linear animations. Fix reset animations. Allow to disable preview on CPURayRenderer.

--- a/MCS/MCS.csproj
+++ b/MCS/MCS.csproj
@@ -312,6 +312,11 @@
   <ItemGroup>
     <Resource Include="Images\Common\Clone.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\AnimationWindow\bezier.png" />
+    <Resource Include="Images\AnimationWindow\linear.png" />
+    <Resource Include="Images\AnimationWindow\loop.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
